fixed gaps in personal-hero__image-box

--- a/src/scss/blocks/_personal-hero.scss
+++ b/src/scss/blocks/_personal-hero.scss
@@ -55,12 +55,12 @@
 
 .personal-hero__col-line {
   margin-bottom: 15px;
-  gap: 15px;
+  // gap: 15px;
   display: flex;
 
   @media #{$screen-768} {
     margin-bottom: 30px;
-    gap: 30px;
+    // gap: 30px;
   }
   
   &--top {
@@ -70,18 +70,24 @@
       &:first-child {
         flex: 1 1 100%;
         max-width: 100%;
+        margin-right: 15px;
 
         .personal-hero__image {
           border-radius: 0 0 0 0;
 
           @media #{$screen-768} {
             border-radius: 0 16px 0 0;
-
           }
         }
 
+        @media #{$screen-768} {
+          margin-right: 0;
+        }
+        
         @media #{$screen-1024} {
           max-width: 332px;
+          margin-right: 30px;
+
 
           .personal-hero__image {
             border-radius: 0 0 0 0;
